# crypto

./: .gitignore  CMakeLists.txt  LRC.c  README.md  build.bat  caesar_cipher.c  hmac.c  hmac.cu  hmac.h  hmacCPU.c  hmacCuda.cu  monoalphabet_cipher.c  sha1.c  sha1.cu  sha1.h  sha512.c
Answer/: chapter1.c
Data_Communications_And_Networking/Problems/: Digital_Transmission.md  Internet_Security.md  Introduction.md  Introduction_To_Physical_Layer.md  Network_Models.md
Data_Communications_And_Networking/Question/: Digital_Transmission.md  Internet_Security.md  Introduction.md  Introduction_To_Physical_Layer.md  Network_Models.md
Review_Questions/: Block_Cipher_And_The_Data_Encryption_Standard.md  Classical_Encryption_Techniques.md  Cryotographic_Key_Management_And_Distribution.md  Cryptographic_Hash_Function.md  Digital_Signatures.md  Public-Key_Cryptography_And_RSA.md  Random_Bit_Generation_And_Stream_Ciphers.md
hash/: LRC.c  LRC_improve.c
image/: README.md
